# MTPL

./: .gitignore  CMakeLists.txt  EXTENSION_LIBRARY_GUIDE.md  LICENSE  README.md  SIGNAL_INTROSPECTION.md
MTPL C++/MTPL/: CMakeLists.txt  CMakePresets.json  README.md
MTPL C++/MTPL/src/mtpl/core/: Morphism.hpp  Signal.hpp  Source.hpp
MTPL C++/MTPL/src/mtpl/timed/: TimedEvent.hpp
MTPL C++/MTPL/tests/: test_immutability.cpp  test_lane_signal_sink.cpp
MTPL Python/MTPL/: README.md  pyproject.toml
MTPL Python/MTPL/src/mtpl/: __init__.py
MTPL Python/MTPL/src/mtpl/core/: __init__.py  event.py  morphism.py  signal.py  source.py
MTPL Python/MTPL/src/mtpl/timed/: __init__.py  timed_event.py
MTPL Python/MTPL/tests/: test_mtpl_core.py
src/mtpl/: mtpl.hpp
src/mtpl/core/: Event.hpp  Morphism.hpp  Signal.hpp  Source.hpp
src/mtpl/timed/: TimedEvent.hpp
tests/: test_immutability.cpp  test_mtpl_core.cpp  test_signal_transform.cpp
